# DirectoryAnalyzer

./: .gitignore  CMakeLists.txt  FileAnalyzer.cpp  FileAnalyzer.hpp  FileInfo.cpp  FileInfo.hpp  README.md  main.cpp
TestDirectory/FirstDirectory/: firstFile.txt  fooFile.txt  thirdfile.txt
TestDirectory/SecondDirectory/: fourthFile.txt
TestDirectory/ThirdDirectory/: testFile.txt  textFileTwo.txt
src/: BaseFileInformation.cpp  DirectoryInformation.cpp  FileAnalyzer.cpp  FileAnalyzer.hpp  FileInformation.cpp  FileInformation.hpp  main.cpp
tests/: AnalyzerTests.cpp  DirectoryAnalyzerUnitTests.cpp  footest.cpp  testRunner.cpp  testgoogletestsetup
tests/testgoogletestsetup.dSYM/Contents/: Info.plist
tests/testgoogletestsetup.dSYM/Contents/Resources/DWARF/: testgoogletestsetup
